Presentation layer arranged.

--- a/CleanArchitecture.MVC/CleanArchitecture.MVC.csproj
+++ b/CleanArchitecture.MVC/CleanArchitecture.MVC.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\CleanArch.Infrastructure.IOC\CleanArch.Infrastructure.IOC.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
