--- a/CleanArch.Domain.Core/CleanArch.Domain.Core.csproj
+++ b/CleanArch.Domain.Core/CleanArch.Domain.Core.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CleanArch.Domain.Core\CleanArch.Domain.Core.csproj" />
+    <PackageReference Include="MediatR" Version="10.0.0" />
   </ItemGroup>
 
 </Project>
