--- a/CleanArch.Infrastructure.Bus/CleanArch.Infrastructure.Bus.csproj
+++ b/CleanArch.Infrastructure.Bus/CleanArch.Infrastructure.Bus.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="10.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CleanArch.Domain.Core\CleanArch.Domain.Core.csproj" />
   </ItemGroup>
 
